# create-igv-session

./: README.md  pyproject.toml
src/create_igv_session/: __init__.py  __main__.py  session_template.json  stylesheet.json
src/create_igv_session/styles/: all-with-rna.json  all.json  default-overlay-rna.json  default-rna.json  default-rna.template.json  default.json  final-rna-alldiffbind.json  final-rna.json  help_styles.txt  ppt.json
