[project]
name = "create-igv-session"
version = "0.1.0"
description = "Create an IGV session based on a stylesheet"
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"create-igv-session" = "create_igv_session:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/create_igv_session"]


[tool.ruff]
line-length = 120


[tool.basedpyright]
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportAny = false
reportImplicitStringConcatenation = false
reportRedeclaration = false
reportUnusedCallResult = false
reportMissingTypeArgument = false
